Bug 137445 - Edit hyperlink doesn't work ( gtk3 )
Summary: Edit hyperlink doesn't work ( gtk3 )
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-13 10:53 UTC by Xisco Faulí
Modified: 2021-02-12 05:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (25.11 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-10-13 10:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-10-13 10:53:51 UTC
Created attachment 166343 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Right click on the link
3. Edit Hyperlink

-> Nothing happens

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: a9976a958b2857e308c6598532151878615bfd9f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and


Version: 6.4.0.0.alpha0+
Build ID: fc1b213d157afa57704cec5a0fb65ae8c11d7822
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-10-13 10:54:17 UTC
@Caolán, I thought you might be interested in this issue
Comment 2 Caolán McNamara 2020-10-13 16:17:42 UTC
It seems there's a two step attempt to see if a hyperlink field is being acted on when the "open hyperlink" is dispatched from the menu.

If you right click on the left side the hyperlink is considered selected, if you right click on the right side it isn't.

In the case of originally clicking on the right side, then at the dispatch time it checks if the mouse is over a hyperlink as a fallback In both gtk and gen this is not actually true, because the mouse is now elsewhere, but the last seen mouse position under gen is the one it saw back on the original right click and it "works"
Comment 3 Caolán McNamara 2020-10-14 09:28:02 UTC
It more common on gtk3 than gen, but it can happen there too. I have something which seems reliable to solve this
Comment 4 Commit Notification 2020-10-14 13:01:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb395e21a7b1f15de664c4b207dc9e130aa635cf

Resolves: tdf#137445 use the DisableEditHyperlink state as of menu launch time

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.