Resolves: tdf#137445 use the DisableEditHyperlink state as of menu launch time

at context menu popup time set if the EditHyperlink entry should be disabled
and use that state if queried about it if EditHyperlink is dispatched from the
menu. So ignoring where the mouse currently happens to be when the menu was
dismissed.

The dispatch is done async, if at all, so also trigger an async Query with
Invalidate so at least one Query is ensured to reset the stored state

Change-Id: I970b15954851f39b039d844c44711bf712fcb482